crates/toml/tests/snapshots/invalid/ext/table/duplicate-key-1.stderr
TOML parse error at line 3, column 4
  |
3 | [a.b]
  |    ^
duplicate key
